--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
           <div class="night">
               <img class="nightpic" src="https://b.zmtcdn.com/data/o2_assets/01040767e4943c398e38e3592bb1ba8a1616150142.png?output-format=webp">
-              <p class="nighttext">Dining Out</p>
+              <p class="nighttext">Night life</p>
           </div>
 
     </div>
